--- a/configure.in
+++ b/configure.in
@@ -19,7 +19,7 @@ EXTRA_GCC_DEBUG_CXXFLAGS=""
 if test -n "$GCC"; then
    EXTRA_GCC_DEBUG_CFLAGS="$CFLAGS"
    EXTRA_GCC_DEBUG_CXXFLAGS="$CXXFLAGS"
-   CFLAGS="-Wall -Wpointer-arith -Wcast-align -Wmissing-prototypes -Wmissing-declarations"
+   CFLAGS="-Wall -Wpointer-arith -Wcast-align -Wmissing-prototypes -Wmissing-declarations -Wwrite-strings"
    CXXFLAGS="-Wall -Wpointer-arith -Wcast-align"
 fi  
 
