o allow for gstreamer0.10 and gstreamer1.0

--- a/configure.in
+++ b/configure.in
@@ -40,7 +40,8 @@ PKG_CHECK_MODULES(GLIB, glib-2.0 gthread-2.0, HAVE_GLIB=yes, HAVE_GLIB=no)
 
 GST_REQS=0.10.1
 GSTPLUG_REQS=0.10.1
-GST_MAJORMINOR=0.10
+GST_OLD_MAJORMINOR=0.10
+GST_NEW_MAJORMINOR=1.0
 
 AC_ARG_WITH( gstreamer,
   AC_HELP_STRING([--without-gstreamer],[compile without GStreamer support]),
@@ -48,7 +49,7 @@ AC_ARG_WITH( gstreamer,
 HAVE_GST=no
 if test x$try_gstreamer = xyes; then
   dnl check for GStreamer
-  PKG_CHECK_MODULES(GST, gstreamer-$GST_MAJORMINOR >= $GST_REQS,
+  PKG_CHECK_MODULES(GST, gstreamer-$GST_NEW_MAJORMINOR >= $GST_REQS,
     [
       HAVE_GST=yes
       AC_SUBST(GST_CFLAGS)
@@ -58,6 +59,19 @@ if test x$try_gstreamer = xyes; then
     [
       HAVE_GST=no
     ])
+
+    if test x$HAVE_GST = xno; then
+       # check for an old version.
+       PKG_CHECK_MODULES(GST, gstreamer-$GST_OLD_MAJORMINOR >= $GST_REQS,
+       [
+         HAVE_GST=yes
+         AC_SUBST(GST_CFLAGS)
+         AC_SUBST(GST_LIBS)
+       ],
+       [
+         HAVE_GST=no
+       ])
+    fi
 fi
 if test x$HAVE_GST = xyes; then
   AC_DEFINE(HAVE_GST, , [Use GStreamer])
