o move song meta data in its own file.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,6 +3,7 @@ bin_PROGRAMS = gmediarender
 gmediarender_SOURCES = main.c \
 	upnp.c upnp_control.c upnp_connmgr.c  upnp_transport.c \
 	upnp.h upnp_control.h upnp_connmgr.h  upnp_transport.h \
+	song-meta-data.h song-meta-data.c \
 	upnp_device.c upnp_device.h \
 	upnp_renderer.h upnp_renderer.c \
 	webserver.c webserver.h \
