--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,6 +1,6 @@
 bin_PROGRAMS = gmediarender
 
-gmediarender_SOURCES = main.c \
+gmediarender_SOURCES = main.c git-version.h \
 	upnp.c upnp_control.c upnp_connmgr.c  upnp_transport.c \
 	upnp.h upnp_control.h upnp_connmgr.h  upnp_transport.h \
 	song-meta-data.h song-meta-data.c \
@@ -18,6 +18,13 @@ if HAVE_GST
 gmediarender_SOURCES += \
 	output_gstreamer.c  output_gstreamer.h
 endif
+
+git-version.h: .FORCE
+	$(AM_V_GEN)(echo "#define GM_COMPILE_VERSION \"$(shell git log -n1 --date=short --format='%cd_%h' 2>/dev/null || echo -n '0.0.7-git')\"" > $@-new; \
+	cmp -s $@ $@-new || cp $@-new $@; \
+	rm $@-new)
+
+.FORCE:
 
 AM_CPPFLAGS = $(GLIB_CFLAGS) $(GST_CFLAGS) $(LIBUPNP_CFLAGS) -DPKG_DATADIR=\"$(datadir)/gmediarender\"
 gmediarender_LDADD = $(GLIB_LIBS) $(GST_LIBS) $(LIBUPNP_LIBS) 
