initial implementation of OpenHome Playlist service
this does not create an OpenHome renderer yet, but can be controlled
with an UPnP device and service analyzer, e.g. UPnP Inspector

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -12,7 +12,8 @@ gmediarender_SOURCES = main.c git-version.h \
 	logging.h logging.c \
 	xmldoc.c xmldoc.h \
 	xmlescape.c xmlescape.h \
-	mime_types.c mime_types.h
+	mime_types.c mime_types.h \
+	oh_playlist.c oh_playlist.h
 
 if HAVE_GST
 gmediarender_SOURCES += \
