--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -16,6 +16,7 @@ gmediarender_SOURCES = main.c git-version.h \
 	oh_playlist.c oh_playlist.h \
 	oh_info.c oh_info.h \
 	oh_time.c oh_time.h \
+	oh_product.c oh_product.h \
 	playlist.c playlist.h \
 	shared_metadata.c shared_metadata.h
 
