--- a/dist-scripts/centos7/gmediarender.service
+++ b/dist-scripts/centos7/gmediarender.service
@@ -7,7 +7,7 @@ Type=simple
 User=gmediarender
 Group=gmediarender
 PIDFile=/run/gmediarender.pid
-ExecStart=/usr/bin/gmediarender --daamon --pidfile=/run/gmediarender.pid
+ExecStart=/usr/bin/gmediarender --daemon --pidfile=/run/gmediarender.pid
 
 [Install]
 WantedBy=multi-user.target
