--- a/dist-scripts/debian/rules
+++ b/dist-scripts/debian/rules
@@ -7,6 +7,7 @@ export DEB_BUILD_HARDENING=1
 override_dh_auto_configure:
 	./autogen.sh
 	dh_auto_configure --
+	touch /tmp/gmrender-resurrect.vars
 
 override_dh_auto_clean:
 	if [ -e ./Makefile ]; then make maintainer-clean; fi
