create new output_module element
The choice of the module is a part of the main part of the application.
To have the module selection tool into the ouput element force to have
all modules into the ouput. In this case a new module is only allowed
for gmrender application.
The goal is to reuse gmrender into other media application.
It is possible to dispatch gmrender between an application (main.c +
output_module.c) and a library (all other files).

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,6 +1,7 @@
 bin_PROGRAMS = gmediarender
 
 gmediarender_SOURCES = main.c git-version.h \
+	output_module.c output_module.h \
 	upnp.c upnp_control.c upnp_connmgr.c  upnp_transport.c \
 	upnp.h upnp_control.h upnp_connmgr.h  upnp_transport.h \
 	song-meta-data.h song-meta-data.c \
