Rename upnp.{h,c} to upnp_service.{h,c} to disambiguate from global header.
Preparation to address #167.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,8 +1,8 @@
 bin_PROGRAMS = gmediarender
 
 gmediarender_SOURCES = main.c git-version.h \
-	upnp.c upnp_control.c upnp_connmgr.c  upnp_transport.c \
-	upnp.h upnp_control.h upnp_connmgr.h  upnp_transport.h \
+	upnp_service.c upnp_control.c upnp_connmgr.c  upnp_transport.c \
+	upnp_service.h upnp_control.h upnp_connmgr.h  upnp_transport.h \
 	song-meta-data.h song-meta-data.c \
 	variable-container.h variable-container.c \
 	upnp_device.c upnp_device.h \
@@ -28,4 +28,4 @@ git-version.h: .FORCE
 .FORCE:
 
 AM_CPPFLAGS = $(GLIB_CFLAGS) $(GST_CFLAGS) $(LIBUPNP_CFLAGS) -DPKG_DATADIR=\"$(datadir)/gmediarender\"
-gmediarender_LDADD = $(GLIB_LIBS) $(GST_LIBS) $(LIBUPNP_LIBS) 
+gmediarender_LDADD = $(GLIB_LIBS) $(GST_LIBS) $(LIBUPNP_LIBS)
