--- a/configure.ac
+++ b/configure.ac
@@ -1,9 +1,14 @@
 AC_PREREQ(2.59)
-AC_INIT(gmediarender, 0.0.8, https://github.com/hzeller/gmrender-resurrect)
+AC_INIT([gmediarender], 0.0.8, https://github.com/hzeller/gmrender-resurrect)
 AC_CONFIG_AUX_DIR(config)
 AC_CONFIG_SRCDIR(src/main.c)
 AC_CONFIG_HEADERS(config.h)
-AM_INIT_AUTOMAKE([1.8 dist-bzip2 no-dist-gzip check-news])
+AC_CONFIG_MACRO_DIRS([m4])
+AM_INIT_AUTOMAKE([1.8 dist-bzip2 no-dist-gzip check-news foreign])
+
+AC_SUBST(GMRENDER_GST_VERSION, [0.0.8])
+
+LT_INIT
 
 AC_SYS_LARGEFILE
 
