create GmSLIST object to replace GSLIST
upnp_connmgr uses GSLIST object. The file gmrender_list.c emulates the
GSLIST object from glib2.
GmSLIST is less efficient than GSLIST to create new entries, but
GmRender creates the list of mime only during the startup.
For the rest of functions, the performances should be approximately the
same.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -10,6 +10,7 @@ gmediarender_SOURCES = main.c git-version.h \
 	webserver.c webserver.h \
 	output.c output.h \
 	logging.h logging.c \
+	gmrender_list.c gmrender_list.h \
 	xmldoc.c xmldoc.h \
 	xmlescape.c xmlescape.h
 
